[gd_scene load_steps=21 format=3 uid="uid://dg44b53341c71"]

[ext_resource type="PackedScene" uid="uid://cd8xue54t3hyv" path="res://Characters/entity_base.tscn" id="1_kxmld"]
[ext_resource type="Script" path="res://Characters/blue_cow.gd" id="2_ju647"]
[ext_resource type="Texture2D" uid="uid://dt22axtsvplnp" path="res://Art/Sprout Lands - Sprites - Basic pack/Characters/Free Cow Sprites.png" id="2_lq6dl"]
[ext_resource type="Script" path="res://finite_state_machine.gd" id="4_3huqd"]
[ext_resource type="Script" path="res://Characters/wonder_state.gd" id="5_oq8c6"]
[ext_resource type="Script" path="res://Characters/follow_state.gd" id="6_jpvb7"]

[sub_resource type="Animation" id="Animation_pud83"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_foa0q"]
resource_name = "idle_right"
length = 2.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.633333, 1.46667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 2, 1]
}

[sub_resource type="Animation" id="Animation_ffaai"]
resource_name = "walk_right"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7frym"]
_data = {
"RESET": SubResource("Animation_pud83"),
"idle_right": SubResource("Animation_foa0q"),
"walk_right": SubResource("Animation_ffaai")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1sgay"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c77to"]
animation = &"walk_right"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_go83l"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1561i"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eus6u"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_dd3bs"]
states/idle_right/node = SubResource("AnimationNodeAnimation_1sgay")
states/idle_right/position = Vector2(402.073, 99.4375)
states/walk_right/node = SubResource("AnimationNodeAnimation_c77to")
states/walk_right/position = Vector2(584.29, 100)
transitions = ["Start", "idle_right", SubResource("AnimationNodeStateMachineTransition_go83l"), "idle_right", "walk_right", SubResource("AnimationNodeStateMachineTransition_1561i"), "walk_right", "idle_right", SubResource("AnimationNodeStateMachineTransition_eus6u")]
graph_offset = Vector2(62.79, -9.44221e-06)

[sub_resource type="Animation" id="Animation_nc8xx"]
length = 0.001

[sub_resource type="Animation" id="Animation_x3lbl"]
resource_name = "idle_right"
length = 1.5
loop_mode = 1

[sub_resource type="Animation" id="Animation_ytleq"]
resource_name = "walk_right"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1xo5k"]
_data = {
"RESET": SubResource("Animation_nc8xx"),
"idle_right": SubResource("Animation_x3lbl"),
"walk_right": SubResource("Animation_ytleq")
}

[node name="blue_cow" instance=ExtResource("1_kxmld")]
script = ExtResource("2_ju647")
move_speed = 20.0
idle_time = 1.0
walk_time = 2.0

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("2_lq6dl")
hframes = 3
vframes = 2
frame = 3

[node name="AnimationTree" parent="." index="1"]
libraries = {
"": SubResource("AnimationLibrary_7frym")
}
tree_root = SubResource("AnimationNodeStateMachine_dd3bs")

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_1xo5k")
}

[node name="CollisionShape2D" parent="." index="3"]
position = Vector2(0, 5)

[node name="Timer" type="Timer" parent="." index="4"]

[node name="Finite_State_Machine" type="Node" parent="." index="5" node_paths=PackedStringArray("state")]
script = ExtResource("4_3huqd")
state = NodePath("WonderState")

[node name="WonderState" type="Node" parent="Finite_State_Machine" index="0" node_paths=PackedStringArray("actor", "animation_tree", "timer", "sprite")]
script = ExtResource("5_oq8c6")
move_speed = 20.0
actor = NodePath("../..")
animation_tree = NodePath("../../AnimationTree")
timer = NodePath("../../Timer")
sprite = NodePath("../../Sprite2D")

[node name="FollowState" type="Node" parent="Finite_State_Machine" index="1" node_paths=PackedStringArray("raycast1", "raycast2", "raycast3", "raycast4", "raycast5", "raycast6", "raycast7", "raycast8", "navigation_agent_2d", "sprite", "animation_tree", "actor", "parent_node")]
script = ExtResource("6_jpvb7")
raycast1 = NodePath("../../RayCast2D")
raycast2 = NodePath("../../RayCast2D2")
raycast3 = NodePath("../../RayCast2D3")
raycast4 = NodePath("../../RayCast2D4")
raycast5 = NodePath("../../RayCast2D5")
raycast6 = NodePath("../../RayCast2D6")
raycast7 = NodePath("../../RayCast2D7")
raycast8 = NodePath("../../RayCast2D8")
navigation_agent_2d = NodePath("../../NavigationAgent2D")
sprite = NodePath("../../Sprite2D")
animation_tree = NodePath("../../AnimationTree")
actor = NodePath("../..")
parent_node = NodePath("../..")
move_speed = 20.0

[node name="RayCast2D" type="RayCast2D" parent="." index="6"]
target_position = Vector2(0, -43)

[node name="RayCast2D2" type="RayCast2D" parent="." index="7"]
target_position = Vector2(33, -34)

[node name="RayCast2D3" type="RayCast2D" parent="." index="8"]
target_position = Vector2(49, 0)

[node name="RayCast2D4" type="RayCast2D" parent="." index="9"]
target_position = Vector2(38, 42)

[node name="RayCast2D5" type="RayCast2D" parent="." index="10"]

[node name="RayCast2D6" type="RayCast2D" parent="." index="11"]
target_position = Vector2(-37, 39)

[node name="RayCast2D7" type="RayCast2D" parent="." index="12"]
target_position = Vector2(-51, 0)

[node name="RayCast2D8" type="RayCast2D" parent="." index="13"]
target_position = Vector2(-34, -35)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." index="14"]

[node name="Timer2" type="Timer" parent="." index="15"]
one_shot = true

[connection signal="timeout" from="Timer" to="Finite_State_Machine/WonderState" method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
